# wikiloom

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
docs/img/: wikiloom_ingest_pipeline.mmd
tests/: conftest.py  test_backlinks.py  test_cache.py  test_chunk_store.py  test_chunker.py  test_cli_clean_tree.py  test_cli_dormant.py  test_cli_ingest.py  test_cli_init_fastembed.py  test_cli_init_spacy.py  test_cli_lifecycle.py  test_cli_mcp.py  test_cli_queries.py  test_config.py  test_context.py  test_duplicates.py  test_embeddings.py  test_events.py  test_git_ops.py  test_ingest_hardening.py  test_ingest_pipeline.py  test_ingest_state.py  test_linker.py  test_lint.py  test_llm.py  test_llm_live.py  test_mcp.py  test_observability.py  test_page_context.py  test_page_writer.py  test_protection.py  test_query.py  test_query_history.py  test_registry.py  test_retrieval.py  test_search.py  test_source_catalog.py  test_synthesis.py
wikiloom/: __init__.py  __main__.py  backlinks.py  cache.py  chunk_store.py  cli.py  cli_output.py  config.py  context.py  duplicates.py  embeddings.py  events.py  frontmatter.py  git_ops.py  linker.py  lint.py  llm.py  llm_errors.py  locking.py  merge.py  page_context.py  protection.py  query.py  query_history.py  registry.py  retrieval.py  scaffold.py  search.py  source_catalog.py  synthesis.py  utils.py
wikiloom.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
wikiloom/ingest/: __init__.py  chunker.py  errors.py  page_writer.py  processor.py  router.py  state.py
wikiloom/ingest/extractors/: __init__.py  base.py  code_ext.py  image_ext.py  markdown_ext.py  office_ext.py  pdf_ext.py  web_ext.py
wikiloom/mcp/: __init__.py  models.py  server.py
wikiloom/templates/: decision.md  schema.md  stub.md
wikiloom/templates/output_formats/: ingest_response.json  query_response.json
wikiloom/templates/prompts/: ingest.md  lint.md  query.md
