[project]
name = "wikiloom"
version = "0.1.0"
description = "LLM-maintained knowledge bases with deterministic linking"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "click>=8.0",
    "litellm>=1.0",
    "spacy>=3.7",
    "rapidfuzz>=3.0",
    "pymupdf>=1.23",
    "trafilatura>=1.6",
    "python-docx>=1.0",
    "python-pptx>=0.6",
    "gitpython>=3.1",
    "networkx>=3.0",
    "pyyaml>=6.0",
    "tomli>=2.0;python_version<'3.11'",
    "tomli-w>=1.0",
    "markdown-it-py>=3.0",
]

[project.optional-dependencies]
audio = ["openai-whisper>=20231117"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.1"]

[project.scripts]
wikiloom = "wikiloom.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
