[project]
name = "wikiloom"
version = "0.1.7"
description = "LLM-maintained knowledge bases with deterministic linking"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Do Lee", email = "do.lee.y@gmail.com"},
]
keywords = [
    "llm",
    "knowledge-base",
    "wiki",
    "pkm",
    "rag",
    "claude",
    "anthropic",
    "wikilinks",
    "markdown",
    "synthesis",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Office/Business",
]

dependencies = [
    "click>=8.0",
    "litellm>=1.0",
    "numpy>=1.24",
    "spacy>=3.7",
    "rapidfuzz>=3.0",
    "pymupdf>=1.23",
    "trafilatura>=1.6",
    "python-docx>=1.0",
    "python-pptx>=0.6",
    "gitpython>=3.1",
    "networkx>=3.0",
    "pyyaml>=6.0",
    "tomli>=2.0;python_version<'3.11'",
    "tomli-w>=1.0",
    "markdown-it-py>=3.0",
    "fastembed>=0.3",
    "python-dotenv>=1.0",
    "platformdirs>=4.0",
]

[project.urls]
Homepage = "https://github.com/do-y-lee/wikiloom"
Source = "https://github.com/do-y-lee/wikiloom"
Issues = "https://github.com/do-y-lee/wikiloom/issues"

[project.optional-dependencies]
audio = ["openai-whisper>=20231117"]
openai-embeddings = ["openai>=1.0"]
local-embeddings = ["sentence-transformers>=2.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.1"]

[project.scripts]
wikiloom = "wikiloom.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
# Non-Python assets that wikiloom init copies into a new project.
# Without this, setuptools only ships .py files in the wheel and
# `wikiloom init` would fail on a pip-installed package.
wikiloom = [
    "templates/*.md",
    "templates/prompts/*.md",
    "templates/output_formats/*.json",
]

[tool.pytest.ini_options]
# `live` marks tests that hit a real LLM provider. Skipped by default
# so `pytest` stays free and deterministic. Run them manually with:
#     ANTHROPIC_API_KEY=... pytest -m live
markers = [
    "live: tests that hit a real LLM provider (skipped by default)",
]
addopts = "-m 'not live'"
